Fixed keyboard shortcuts

--- a/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/accessibility/keyboardshortcuts.htm
@@ -20,7 +20,9 @@
  and across the text and Java editors supplied with Eclipse.</p>
  
  <p>The first table shows the default key bindings. The second table shows the
- key bindings for the Emacs key bindings shipped with Eclipse. </p>
+ key bindings for the Emacs key bindings shipped with Eclipse. Cells in gray
+ represent system shortcuts and should not be used as accelerators by
+ applications. </p>
  
 <table border=0 cellspacing=5 cellpadding=2 summary="Main display table">
   <tr> 
@@ -87,8 +89,8 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">E</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(JDT editor) Next Problem, Edit/ Delete line</TD>
-<TD ALIGN="left">(JDT editor) Previous Problem, Edit/Delete Line to End</TD>
+<TD ALIGN="left">Edit/ Delete line</TD>
+<TD ALIGN="left">Edit/Delete Line to End</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
@@ -313,7 +315,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">(JDT editor) Content Assist</TD>
 <TD ALIGN="left">(JDT editor) Parameter Hints&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(Windows) Window menu</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Window menu</TD>
 <TD ALIGN="left">&nbsp;</TD>
 </TR>
 <TR VALIGN="bottom">
@@ -333,18 +335,18 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(Windows) Undo</TD>
-<TD ALIGN="left">(X11) Shutdown X server</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Undo</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Shutdown X server</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">Esc</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(Windows) Start menu</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Start menu</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(Windows) Next app window</TD>
-<TD ALIGN="left">&nbsp;</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Next app window</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">&nbsp;</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">Tab</TD>
@@ -353,14 +355,14 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(Windows) Window switcher</TD>
-<TD ALIGN="left">&nbsp;</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Window switcher</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">&nbsp;</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">Insert</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(Windows) Paste</TD>
-<TD ALIGN="left">(Windows) Copy</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Paste</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Copy</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
@@ -419,7 +421,7 @@ Default Key Bindings</b></caption>
 <TR VALIGN="bottom">
 <TD ALIGN="left">Delete</TD>
 <TD ALIGN="left">Edit / Delete</TD>
-<TD ALIGN="left">(Windows) Cut</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Cut</TD>
 <TD ALIGN="left">Edit / Delete</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
@@ -430,21 +432,21 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">Hyphen (-)</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">&nbsp;</TD>
+<TD ALIGN="left">(JDT editor) Previous Problem</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">Show System Menu</TD>
-<TD ALIGN="left">(X11) Decrease resolution</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Decrease resolution</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">Plus (+)</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
+<TD ALIGN="left">(JDT editor) Next Problem</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Increase resolution</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Increase resolution</TD>
 </TR>
 <tr>
 <TD ALIGN="left" width="71">Front Slash (/)</TD>
@@ -543,7 +545,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">Help</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F2</TD>
@@ -554,7 +556,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F3</TD>
@@ -564,7 +566,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F4</TD>
@@ -574,7 +576,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">File / Close All</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">(Windows) Close window</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F5</TD>
@@ -586,7 +588,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F6</TD>
@@ -596,7 +598,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">Previous Editor</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">(Windows) Switch to previous window in same program</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F7</TD>
@@ -606,7 +608,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">Previous View</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F8</TD>
@@ -616,7 +618,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">Previous Perspective</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F9</TD>
@@ -626,17 +628,17 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F10</TD>
-<TD ALIGN="left">(Windows) Activate menubar</TD>
-<TD ALIGN="left">(Windows, Motif) Context menu</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows) Activate menubar</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(Windows, Motif) Context menu</TD>
 <TD ALIGN="left">Show View Menu</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F11</TD>
@@ -646,7 +648,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">F12</TD>
@@ -656,7 +658,7 @@ Default Key Bindings</b></caption>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
 <TD ALIGN="left">&nbsp;</TD>
-<TD ALIGN="left">(X11) Switch to console</TD>
+<TD ALIGN="left" bgcolor="#C0C0C0">(X11) Switch to console</TD>
 </TR>
 <TR VALIGN="bottom">
 <TD ALIGN="left">1</TD>
@@ -685,10 +687,10 @@ Default Key Bindings</b></caption>
 
    </td>
   </tr>
-</table>
+  <tr> 
+   <td>
 
 <p>
-<!-- START OF CONVERTED OUTPUT -->
 <!-- ------------------------- -->
 <div align="left">
 <Table border="1" height="2433" width="953" summary="Table of Emacs key bindings" >
@@ -1595,7 +1597,13 @@ Default Key Bindings</b></caption>
 <!-- END OF CONVERTED OUTPUT -->
 <!-- ------------------------- -->
 
-<p>&nbsp;
+   </td>
+  </tr>
+</table>
+
+<p>
+<!-- START OF CONVERTED OUTPUT -->
+&nbsp;
 
 <p><img src="../../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
  <a href="accessmain.htm"><br>Accessibility Features in Eclipse</a>
