Cleaned up html code

--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36.htm
@@ -3,17 +3,17 @@
 <meta http-equiv="Content-Style-Type" content="text/css">
 
 <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Searching</title></head>
-<body bgcolor="#ffffff">
-<h2>
-Searching</h2>
-<p class="Head">
-You can search for text strings and files in the Workbench.&nbsp;In this section we
+<body>
+
+<h2>Searching</h2>
+
+<p>You can search for text strings and files in the Workbench.&nbsp;In this section we
 will use the Search button <img align="Texttop" border="0" src="../images/Image50_search.jpg" alt="Search button" width="20" height="19"> to
 perform a text search across the resources shown in our Navigator. Next we will learn
 how to use the Search view to work with the search results.</p>
 
 
-<P><a href="qs-36a.htm">
+<p><a href="qs-36a.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
 Starting a search</a><p><a href="qs-35d.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12"> 
