--- a/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/csearchview.htm
@@ -2,43 +2,35 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
 <meta http-equiv="Content-Style-Type" content="text/css">
 
-<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Search view</title></head><body bgcolor="#ffffff">
+<link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css"><title>Search view</title></head><body>
 <h1>
 Search view</h1>
 
-<p class="Para">
+<p>
 This view displays the results of a search.&nbsp;&nbsp;</p>
-<p class="Para">
+
+<p>
 Text searches will only search for expressions in files with extensions (file
 types) specified in the search dialog.</p>
-<p class="Para">
+
+<p>
 Here is what the Search view looks like:</p>
-<p class="Para">
+<p>
 <img align="Texttop" border="0" src="../images/Image237_search_view.jpg" alt="Search View"></p>
 <h2>
 Toolbar</h2>
 <p>The toolbar in the Search view contains the following buttons:</p>
 <dl>
-<dt>
-Show Next Match</dt>
-<dd>
-This command highlights the next match of the search
-expression in the editor area, opening the file if required.</dd>
-<dt>Show Previous Match</dt>
-<dd>
-This command highlights the previous match of the
-search expression in the editor area, opening the file if required.</dd>
-<dt>Remove Selected Matches</dt>
-<dd>Removes all highlighted matches from the search results.</dd>
-<dt>Search</dt>
-<dd>
-This command opens the Search dialog.</dd>
-<dt>
-Previous Search Results</dt>
-<dd>
-This command allows you to browse previously
-conducted searches and repeat a previous search.&nbsp; You can select a previous
-search from the drop-down menu or clear the search history.<dd>
+	<dt>Show Next Match</dt>
+		<dd>This command highlights the next match of the search expression in the editor area, opening the file if required.</dd>
+	<dt>Show Previous Match</dt>
+		<dd>This command highlights the previous match of the search expression in the editor area, opening the file if required.</dd>
+	<dt>Remove Selected Matches</dt>
+		<dd>Removes all highlighted matches from the search results.</dd>
+	<dt>Search</dt>
+		<dd>This command opens the Search dialog.</dd>
+	<dt>Previous Search Results</dt>
+		<dd>This command allows you to browse previously conducted searches and repeat a previous search.&nbsp; You can select a previous search from the drop-down menu or clear the search history.</dd>
 </dl>
 
 <p><br>
@@ -47,17 +39,17 @@ search from the drop-down menu or clear the search history.<dd>
 <br>
 <a href="concepts-5.htm">Views</a>
 </p>
-<p class="Para"><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
 <a href="../tasks/tasks-84.htm">Searching for text within a file</a><br>
 <a href="../tasks/tasks-84b.htm">Searching For Files</a>
 <br>
 </p>
-<p class="Para"><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-26.htm">Search view</a><br><a href="../reference/ref-45.htm">File search</a><br></p>
+
+<p><img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br><a href="../reference/ref-26.htm">Search view</a><br><a href="../reference/ref-45.htm">File search</a><br></p>
 
 
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 </p>
-
-
 
 </body></html>
