--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36a.htm
@@ -7,80 +7,30 @@
 <title>Starting a search</title>
 
 </HEAD>
-<BODY BGCOLOR="#ffffff">
-<h3>
-Starting a search</h3>
-<p CLASS="Head">
-You can search for text strings in the Workbench as follows:</p>
+<body>
+<h3>Starting a search</h3>
+
+<p>You can search for text strings in the Workbench as follows:</p>
+
 <ol>
-  <li>
-<P CLASS="Para">
-In the Workbench toolbar, click the Search button 
-<img align="texttop" border="0" src="../images/Image50_search.jpg" alt="Search button" width="20" height="19" >.</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the Search Expression field, type in: <i>it.</i></P>
-<P CLASS="Para">The combo box for the <i>Search Expression</i> field also lets
-you select from a list of recently performed searches.</P>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image51_search_it.jpg" alt="Search dialog" width="488" height="378" ></P>
-  </li>
-  <li>
-<P CLASS="Para">You can select or deselect the <i> Case sensitive</i> check box
-depending on whether or not you want to perform a case sensitive or insensitive
-search.&nbsp;</P>
-<P CLASS="Para">We want to search for lowercase &quot;<i>it&quot;</i> so check
-the <i>Case sensitive </i>box.&nbsp;</P>
-  </li>
-  <li>
-<P CLASS="Para">
-In the <i>File name patterns</i> field you can specify the kinds of files to 
-include in your search.&nbsp;</P>
-<P CLASS="Para">Click Browse...&nbsp; to open the Type Selection Dialog. This 
-dialog provides you with a quick way to select from a&nbsp; list of registered 
-extensions.</P>
-<blockquote>
-  <P CLASS="Para">
-  <img align="texttop" border="0" src="../images/Image51_choose_ext.jpg" alt="Type Selection Dialog" width="343" height="458" ></P>
-</blockquote>
-<P CLASS="Para">
-&nbsp;For the moment we will confine our search to .txt files. Ensure .txt is
-checked and click OK.</P>
-  </li>
-  <li>
-<p CLASS="Para">In the Scope field you can specify the files and folders to
-include in the search. The choices are: the entire workspace, the currently
-selected resources in the Workbench, or a working set which is a named,
-customized group of files and folders. Leave the scope as workspace.
-  </li>
-  <li>
-<p CLASS="Para">The Customize button allows you to choose what kinds of searches
-are available in the dialog. This setting may be left unchanged.&nbsp;
-  </li>
-  <li>
-<P CLASS="Para">
-Click Search.</P>
-<P CLASS="Para">
- Note that you can click Cancel to cancel the search while it is in progress and that the Search dialog shows the progress of the search.</P>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image51_search_progress.jpg" alt="Search Dialog" width="487" height="378" ></P>
-  </li>
-  <li>
-<P CLASS="Para">
-Observe that the Search view displays:&nbsp;</P>
-<blockquote>
-<P CLASS="Para">
-<img align="texttop" border="0" src="../images/Image51_search_view.jpg" alt="Search view" width="420" height="152" ></P>
-</blockquote>
-  </li>
+	<li>In the Workbench toolbar, click the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg" alt="Search button" width="20" height="19" >.</li>
+	<li>In the Search Expression field, type in: <i>it.</i>
+		<br>The combo box for the <i>Search Expression</i> field also lets you select from a list of recently performed searches.<br><img align="texttop" border="0" src="../images/Image51_search_it.jpg" alt="Search dialog" width="488" height="378" ></li>
+	<li>You can select or deselect the <i> Case sensitive</i> check box depending on whether or not you want to perform a case sensitive or insensitive search.
+		<br>We want to search for lowercase &quot;<i>it&quot;</i> so check the <i>Case sensitive </i>box.</li>
+	<li>In the <i>File name patterns</i> field you can specify the kinds of files to include in your search.
+		<br>Click Browse... to open the Type Selection Dialog. This dialog provides you with a quick way to select from a&nbsp; list of registered extensions. <blockquote><img align="texttop" border="0" src="../images/Image51_choose_ext.jpg" alt="Type Selection Dialog" width="343" height="458" ></blockquote> For the moment we will confine our search to .txt files. Ensure .txt is checked and click OK.</li>
+	<li>In the Scope field you can specify the files and folders to include in the search. The choices are: the entire workspace, the currently selected resources in the Workbench, or a working set which is a named, customized group of files and folders. Leave the scope as workspace.</li>
+	<li>The Customize button allows you to choose what kinds of searches are available in the dialog. This setting may be left unchanged.</li>
+	<li>Click Search.
+		<br>Note that you can click Cancel to cancel the search while it is in progress and that the Search dialog shows the progress of the search. <img align="texttop" border="0" src="../images/Image51_search_progress.jpg" alt="Search Dialog" width="487" height="378" ></li>
+	<li>Observe that the Search view displays: <blockquote> <img align="texttop" border="0" src="../images/Image51_search_view.jpg" alt="Search view" width="420" height="152" ></blockquote></li>
 </ol>
-<P> In the next
-section we will learn how to work with the Search view.
-</P>
+
+<p> In the next section we will learn how to work with the Search view.</p>
 
 
-<P><a href="qs-36b.htm">
+<p><a href="qs-36b.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12" > 
 The Search view</a><p><a href="qs-36.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12" > 
