--- a/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
+++ b/bundles/org.eclipse.platform.doc.user/gettingStarted/qs-36b.htm
@@ -1,106 +1,60 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html>
+<head>
+	<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+	<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+	<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
 
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>The Search view</title>
+	<title>The Search view</title>
+</head>
 
-</HEAD>
-<BODY BGCOLOR="#ffffff">
+<body>
+
 <h3>The Search view&nbsp;</h3>
-<p CLASS="Head">Now that we have completed our searched for &quot;it&quot; the
+
+<p>Now that we have completed our searched for &quot;it&quot; the
 Search view is visible. The
 title of the Search view shows that 4 matches were found.&nbsp;</p>
 <blockquote>
-  <p CLASS="Head">
+  <p>
   <img align="texttop" border="0" src="../images/Image51_search_view.jpg" alt="Search view" width="420" height="152" >&nbsp;&nbsp;</p>
 </blockquote>
 <p CLASS="Head"> Within the
 Search view two files are shown and we can further see that within each file
 there were 2 matches found.&nbsp; Let's take a more detailed look at the Search
 view.&nbsp;</p>
+
 <ol>
-  <li>
-<p CLASS="Para">
-The title of the search view
-provides us with a description of the
-search we just performed. If the view is too narrow to display the full
-description, hover over the title of the Search view. Observe that hover help appears and
-provides the full description.&nbsp;
-<blockquote>
-  <p CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_hover.jpg" alt="Search view" width="325" height="193"></p>
-</blockquote>
-  </li>
-  <li>
-<P CLASS="Para">
-Click the Show Next Match button <img align="texttop" border="0" src="../images/Image51_search_next.jpg"  alt="Show next match button" width="23" height="18" >
-to navigate to the first match of the search expression (&quot;it&quot;).&nbsp;</P>
-<P CLASS="Para">
- Notice that the file JanesText.txt is automatically selected and opened in the
-editor area.</P>
-<P CLASS="Para">Click Show Next Match button two more times. Once again the
-Search view automatically opens the file.</P>
-  </li>
-  <li>
-<p CLASS="Para">
-It is sometimes useful to remove uninteresting matches from the search results. The Search view's popup menu
-provides two ways to remove matches:
-<ul>
-  <li>
-    <p CLASS="Para">Remove Current Match - Removes the actual match that you are currently looking
-    at. If a file contains multiple matches, as in our case, only the current
-    match is removed.</li>
-  <li>
-    <p CLASS="Para">Remove Selected Match - Removes the file entry and all matches in it. </li>
-</ul>
-  </li>
-  <li>
-<p CLASS="Head"> Choose Remove Current Match from the popup. Notice how JanesFile.txt only has one match
-left.</p>
-  </li>
-  <li>
-<p CLASS="Head"> Select&nbsp;JanesText.txt in the Search view.</p>
-  </li>
-  <li>
-<p CLASS="Para">
-Choose Remove Selected Match from the popup menu. 
-<p CLASS="Para">The Search view now shows only one match for JanesFile.txt</p>
-<blockquote>
-  <p CLASS="Para"><img align="texttop" border="0" src="../images/Image51_search_reduced.jpg" alt="Search view" width="425" height="150" ></p>
-</blockquote>
-  </li>
-  <li>
-<p CLASS="Head"> Perform a second search for &quot;that&quot; by clicking on the Search button 
-<img align="texttop" border="0" src="../images/Image50_search.jpg"  alt="Search button" width="20" height="19" >
- in the Workbench's toolbar.</p>
-  </li>
-  <li>
-<p CLASS="Para">
-The Search view updates to show the results of the new search. 
-<p CLASS="Para">You can move back and forth between your two search results using the drop
-down button on the Search views toolbar. </p>
-<blockquote>
-  <p CLASS="Para">
-  <img align="texttop" border="0" src="../images/Image51_search_switching.jpg" alt="Search view" width="597" height="152"></p>
-</blockquote>
-  </li>
-  <li>
-<p CLASS="Head"> In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view
-switches back to show you the original search. On the context menu choose Search
-Again to repeat the initial search. Notice that once again we have 4 matches.</p>
-  </li>
+	<li>The title of the search view provides us with a description of the search we just performed. If the view is too narrow to display the full description, hover over the title of the Search view. Observe that hover help appears and provides the full description.<blockquote><img align="texttop" border="0" src="../images/Image51_search_hover.jpg" alt="Search view" width="325" height="193"></blockquote></li>
+	<li>Click the Show Next Match button <img align="texttop" border="0" src="../images/Image51_search_next.jpg"  alt="Show next match button" width="23" height="18" > to navigate to the first match of the search expression (&quot;it&quot;).
+		<br>Notice that the file JanesText.txt is automatically selected and opened in the editor area.
+		<br>Click Show Next Match button two more times. Once again the Search view automatically opens the file.</li>
+	<li>It is sometimes useful to remove uninteresting matches from the search results. The Search view's popup menu provides two ways to remove matches:
+		<ul>
+			<li>Remove Current Match - Removes the actual match that you are currently looking at. If a file contains multiple matches, as in our case, only the current match is removed.</li>
+			<li>Remove Selected Match - Removes the file entry and all matches in it.</li>
+		</ul>
+	</li>
+	<li>Choose Remove Current Match from the popup. Notice how JanesFile.txt only has one match left.</li>
+	<li>Select&nbsp;JanesText.txt in the Search view.</li>
+	<li>Choose Remove Selected Match from the popup menu. 
+		<br>The Search view now shows only one match for JanesFile.txt <blockquote><img align="texttop" border="0" src="../images/Image51_search_reduced.jpg" alt="Search view" width="425" height="150" ></blockquote></li>
+	<li>Perform a second search for &quot;that&quot; by clicking on the Search button <img align="texttop" border="0" src="../images/Image50_search.jpg"  alt="Search button" width="20" height="19" > in the Workbench's toolbar.</li>
+	<li>The Search view updates to show the results of the new search.
+		<br>You can move back and forth between your two search results using the drop down button on the Search views toolbar. <blockquote><img align="texttop" border="0" src="../images/Image51_search_switching.jpg" alt="Search view" width="597" height="152"></p></blockquote></li>
+	<li>In the drop down button choose &quot;it&quot; - 1 Occurrence. The Search view switches back to show you the original search. On the context menu choose Search Again to repeat the initial search. Notice that once again we have 4 matches.</li>
 </ol>
 
 
-<P><a href="qs-37-2b.htm">
+<p><a href="qs-37-2b.htm">
 <img border="0" src="../images/ngnext.gif" alt="Next topic" width="49" height="12"> 
-Tasks and markers</a><p><a href="qs-36a.htm">
+Tasks and markers</a></p>
+
+<p><a href="qs-36a.htm">
 <img border="0" src="../images/ngback.gif" alt="Back to previous topic" width="49" height="12" > 
-Starting a search</a><br>
+Starting a search</a><br></p>
+
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14" ></a>
 </p>
 
-
-</BODY>
-</HTML>
+</body>
+</html>
