--- a/bundles/org.eclipse.jdt.doc.user/concepts/clocdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/clocdbug.htm
@@ -13,13 +13,10 @@
       Local debugging
     </h1>
     <p>
-      When a Java program is launched in debug mode (e.g., by clicking the <strong>Debug</strong> button), execution of the program can be controlled by the debugger.
+      When a Java program is launched in debug mode (e.g., by clicking the <span class="control">Debug</span> button), execution of the program can be controlled by the debugger.
     </p>
     <p>
-      &nbsp;<br>
-    </p>
-    <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
