--- a/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cnls.htm
@@ -36,7 +36,7 @@
         Compiler option that lets you mark not-externalized strings as compile-time warnings or errors. 
         <ul>
           <li>
-            See the <strong>Window &gt; Preferences &gt; Java &gt; Compiler &gt; Errors and Warnings &gt; Not-externalized strings</strong> preference
+            See the <span class="control">Window &gt; Preferences &gt; Java &gt; Compiler &gt; Errors and Warnings &gt; Not-externalized strings</span> preference
           </li>
         </ul>
       </li>
@@ -51,20 +51,19 @@
       </li>
     </ul>
     <p>
-      <a href="../tasks/tasks-188.htm">Finding strings to externalize</a> <a href="../tasks/tasks-202.htm">Finding unused and incorrectly used keys in property files</a> <a href=
-      "../tasks/tasks-180.htm">Using the Externalize Strings wizard</a>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+      <a href="../tasks/tasks-188.htm">Finding strings to externalize</a><br>
+      <a href="../tasks/tasks-202.htm">Finding unused and incorrectly used keys in property files</a><br>
+      <a href="../tasks/tasks-180.htm">Using the Externalize Strings wizard</a>
     </p>
     <p>
-      <a href="../reference/ref-menu-source.htm">Source menu</a> <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings wizard</a>
-    </p>
-    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>    
+      <a href="../reference/ref-menu-source.htm">Source menu</a><br>
+      <a href="../reference/ref-wizard-externalize-strings.htm">Externalize Strings wizard</a><br>
       <a href="../reference/ref-preferences-compiler.htm">Compiler preferences</a>
     </p>
     <p>
-      <br>
-    </p>
-    <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
