--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-1.htm
@@ -16,8 +16,8 @@
     </p>
     <p>
       <img src="../images/ngrelc.gif" alt="Related concepts" border="0" height="27" width="159"><br>
-       <a href="cbuildcp.htm">Build classpath</a> <a href="../concepts/cclsspthv.htm"><br>
-       Classpath variables</a><br>
+       <a href="cbuildcp.htm">Build classpath</a><br>
+       <a href="../concepts/cclsspthv.htm">Classpath variables</a><br>
        <a href="../concepts/concepts-10.htm">Debugger</a><br>
        <a href="../concepts/concepts-4.htm">Java builder</a><br>
        <a href="../concepts/concepts-7.htm">Java editor</a><br>
@@ -29,9 +29,7 @@
        <a href="../concepts/concepts-11.htm">Scrapbook</a>
     </p>
     <p>
-      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159">
-    </p>
-    <p>
+      <img src="../images/ngrelt.gif" alt="Related tasks" border="0" height="27" width="159"><br>
       <a href="../tasks/tasks-31.htm">Adding source code as individual files</a><br>
        <a href="../tasks/tasks-11.htm">Creating Java elements</a><br>
        <a href="../tasks/tasks-66.htm">Formatting Java code</a><br>
@@ -40,19 +38,13 @@
        <a href="../tasks/tasks-119.htm">Working with JREs</a>
     </p>
     <p>
-      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159">
-    </p>
-    <p>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>
       <a href="../reference/ref-2.htm">JDT actions</a><br>
        <a href="../reference/ref-152.htm">Frequently asked questions on JDT</a><br>
        <a href="../reference/ref-155.htm">JDT glossary</a><br>
-       &nbsp;
     </p>
     <p>
-      <br>
-    </p>
-    <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
