--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-2.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-2.htm
@@ -14,10 +14,7 @@
     </h1>
     The Java development tooling (JDT) is a set of extensions to the workbench that enable Java development. 
     <p>
-      <br>
-    </p>
-    <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
