--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-5.htm
@@ -97,25 +97,19 @@
       </li>
     </ul>
     <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
-    </p>
-    <p>
+      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
        <a href="../concepts/concepts-6.htm">Java views</a>
     </p>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks">
-    </p>
-    <p>
-      <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
+       <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
+       <a href="../tasks/tasks-144.htm">Adding breakpoints</a><br>
        <a href="../tasks/tasks-42.htm">Opening a type hierarchy in its own perspective</a><br>
        <a href="../tasks/tasks-134.htm">Suspending threads</a>
     </p>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
-    </p>
-    <p>
-      <a href="../reference/ref-35.htm">Breakpoints view</a><br>
+       <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
+       <a href="../reference/ref-35.htm">Breakpoints view</a><br>
        <a href="../reference/ref-45.htm">Console view</a><br>
        <a href="../reference/ref-51.htm">Debug view</a><br>
        <a href="../reference/ref-52.htm">Display view</a><br>
@@ -126,7 +120,7 @@
        <a href="../reference/ref-74.htm">Variables view</a>
     </p>
     <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
