--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-8.htm
@@ -24,12 +24,12 @@
         <tr>
           <td>
             <p>
-              <strong>Command</strong>
+              <span class="control">Command</span>
             </p>
           </td>
           <td>
             <p>
-              <strong>Description</strong>
+              <span class="control">Description</span>
             </p>
           </td>
         </tr>
@@ -101,31 +101,29 @@
       The scope of the search is defined as:
     </p>
     <p>
-      <strong>Workspace</strong> - all projects and files in the workspace are included in this search
+      <span class="control">Workspace</span> - all projects and files in the workspace are included in this search
     </p>
     <p>
-      <strong>Hierarchy</strong> - only the type hierarchy of the selected element is included in this search
+      <span class="control">Hierarchy</span> - only the type hierarchy of the selected element is included in this search
     </p>
     <p>
-      <strong>Working Set</strong> - only resources that belong to the chosen working set are included in this search
+      <span class="control">Working Set</span> - only resources that belong to the chosen working set are included in this search
     </p>
     <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
-    </p>
-    <p>
+      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks">
-    </p>
-    <p>
+      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
       <a href="../tasks/tasks-79.htm">Searching Java code</a>
     </p>
     <p>
-      <a href="../reference/ref-menu-search.htm">Search actions</a> <a href="../reference/ref-131.htm">Java Search tab</a>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>        
+      <a href="../reference/ref-menu-search.htm">Search actions</a><br>
+      <a href="../reference/ref-131.htm">Java Search tab</a>
     </p>
     <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
