--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-9.htm
@@ -16,8 +16,8 @@
       assistance for managing refactorings.
     </p>
     <p>
-      The JDT supports a number of transformations (e.g. <em>Extract Method</em>, <em>Inline Local Variable</em>) described in Martin Fowler&#39;s book <em>Refactoring: Improving
-      the Design of Existing Code</em>, Addison Wesley 1999.
+      The JDT supports a number of transformations (e.g. <span class="name">Extract Method</span>, <span class="name">Inline Local Variable</span>) described in Martin Fowler&#39;s book
+      <span class="name">Refactoring: Improving the Design of Existing Code</span>, Addison Wesley 1999.
     </p>
     <p>
       When performing a refactoring operation, you can optionally preview all the impending changes resulting from a refactoring action before you choose to carry them out. Thus,
