--- a/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cremdbug.htm
@@ -16,13 +16,12 @@
       It is possible to connect to and debug a Java program that has been launched in debug mode configured to accept connections on a remote or local host. Debugging a remote
       program is similar to debugging a regular Java program, except that the program has already been launched and could be on a remote host. <a href="clocdbug.htm">See Debugging
       Locally</a>
+    </p>    
+    <p class="Note">
+      Note: Launching a Java program in debug mode is VM-specific.
     </p>
-     <em>Note: Launching a Java program in debug mode is VM-specific.</em> 
     <p>
-      &nbsp;<br>
-    </p>
-    <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
