--- a/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cbrkpnts.htm
@@ -31,10 +31,12 @@
       Debugging breakpoints are displayed in the marker bar in the editor area and in the Breakpoints view.
     </p>
     <p>
-      <a href="../reference/ref-4.htm">Run menu</a> <a href="../reference/ref-35.htm">Breakpoints view</a>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>    
+      <a href="../reference/ref-4.htm">Run menu</a><br>
+      <a href="../reference/ref-35.htm">Breakpoints view</a><br>
     </p>
     <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
