--- a/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/cclsspthv.htm
@@ -13,32 +13,28 @@
       Classpath variables
     </h1>
     <p>
-      In addition to projects and JARs the build path of a Java project can also contain variables. These variables are called class path variables and can point to a JAR file.
+      In addition to projects and JARs the build path of a Java project can also contain variables.
+      These variables are called class path variables and can point to a JAR file.
     </p>
     <p>
       <img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+      <a href="concepts-1.htm">Java development tools (JDT)</a><br>
+      <a href="cbuildcp.htm">Build classpath</a>
     </p>
     <p>
-      <a href="concepts-1.htm">Java development tools (JDT)</a> <a href="cbuildcp.htm"><br>
-       Build classpath</a>
-    </p>
-    <p>
-      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-    </p>
-    <p>
-      <a href="../tasks/tasks-114.htm">Adding a variable classpath entry</a><br>
+      <img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+       <a href="../tasks/tasks-114.htm">Adding a variable classpath entry</a><br>
        <a href="../tasks/tasks-116.htm">Attaching source to a classpath variable</a><br>
        <a href="../tasks/tasks-117.htm">Defining a classpath variable</a><br>
        <a href="../tasks/tasks-118.htm">Deleting a classpath variable</a>
     </p>
     <p>
-      <a href="../reference/ref-15.htm">Classpath Variables preferences</a> <a href="../reference/ref-123.htm">Java Build Path properties</a>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>    
+      <a href="../reference/ref-15.htm">Classpath Variables preferences</a><br>
+      <a href="../reference/ref-123.htm">Java Build Path properties</a><br>
     </p>
     <p>
-      <br>
-    </p>
-    <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
