--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-3.htm
@@ -30,16 +30,12 @@
       </li>
     </ul>
     <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
-    </p>
-    <p>
+      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
       <a href="concepts-4.htm">Java builder</a><br>
-       <a href="../concepts/concepts-9.htm">Refactoring support</a>
+      <a href="../concepts/concepts-9.htm">Refactoring support</a>
     </p>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks">
-    </p>
-    <p>
+      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
       <a href="../tasks/tasks-85.htm">Copying and moving Java elements</a><br>
        <a href="../tasks/tasks-11.htm">Creating Java elements</a><br>
        <a href="../tasks/tasks-13.htm">Creating a Java project as its own source container</a><br>
@@ -50,10 +46,12 @@
        <a href="../tasks/tasks-12.htm">Creating a new Java project</a><br>
     </p>
     <p>
-      <a href="../reference/ref-121.htm">New Java Project wizard</a> <a href="../reference/ref-preferences-new-project.htm">New Project preferences</a>
+      <img src="../images/ngrelr.gif" alt="Related reference" border="0" height="27" width="159"><br>    
+      <a href="../reference/ref-121.htm">New Java Project wizard</a><br>
+      <a href="../reference/ref-preferences-new-project.htm">New Project preferences</a>
     </p>
     <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
