--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-6.htm
@@ -32,18 +32,18 @@
     </p>
     <ul>
       <li>
-        <strong><span>Show the Type Hierarchy</span></strong> <span>displays the type hierarchy of a type.</span>
+        <span class="control"><span>Show the Type Hierarchy</span></span> <span>displays the type hierarchy of a type.</span>
       </li>
       <li>
-        <strong><span>Show the Supertype Hierarchy</span></strong> <span>displays the supertype hierarchy of a type.</span>
+        <span class="control"><span>Show the Supertype Hierarchy</span></span> <span>displays the supertype hierarchy of a type.</span>
       </li>
       <li>
-        <span><strong>Show the Subtype Hierarchy</strong> displays the supertype hierarchy of a type.</span>
+        <span><span class="control">Show the Subtype Hierarchy</span> displays the supertype hierarchy of a type.</span>
       </li>
     </ul>
     <hr>
     <h2>
-      <strong>The following views are most commonly used in the Java Browsing perspective.</strong>
+      <span class="control">The following views are most commonly used in the Java Browsing perspective.</span>
     </h2>
     <h2>
       Projects view
@@ -75,26 +75,19 @@
       The Members shows the content of a type, compilation unit or CLASS file. Typically, the Types view is used to make this selection.
     </p>
     <p>
-      <br>
-       <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
-    </p>
-    <p>
-      <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
+       <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
+       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a><br>
        <a href="../concepts/concepts-5.htm">Java perspectives</a>
     </p>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks">
-    </p>
-    <p>
-      <a href="../tasks/tasks-10.htm">Changing the appearance of the console view</a><br>
+       <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
+       <a href="../tasks/tasks-10.htm">Changing the appearance of the console view</a><br>
        <a href="../tasks/tasks-38.htm">Changing the appearance of the Hierarchy view</a><br>
        <a href="../tasks/tasks-130.htm">Launching a Java program</a>
     </p>
     <p>
-      <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference">
-    </p>
-    <p>
-      <a href="../reference/ref-35.htm">Breakpoints view</a><br>
+       <img border="0" width="159" height="27" src="../images/ngrelr.gif" alt="Related reference"><br>
+       <a href="../reference/ref-35.htm">Breakpoints view</a><br>
        <a href="../reference/ref-45.htm">Console view</a><br>
        <a href="../reference/ref-51.htm">Debug view</a><br>
        <a href="../reference/ref-52.htm">Display view</a><br>
@@ -107,7 +100,7 @@
       <br>
     </p>
     <p>
-      &nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
+      <a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0"></a>
     </p>
   </body>
 </html>
