--- a/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/ctemplates.htm
@@ -18,19 +18,19 @@
       The JDT offers support for creating, managing and using templates.
     </p>
     <p>
-      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0">
-    </p>
-    <p>
+      <img width="159" height="27" src="../images/ngrelc.gif" alt="Related concepts" border="0"><br>
       <a href="../concepts/concepts-1.htm">Java development tools (JDT)</a>
     </p>
     <p>
       <img border="0" width="159" height="27" src="../images/ngrelt.gif" alt="Related tasks"><br>
        <a href="../tasks/tasks-171.htm">Using templates</a><br>
-       <a href="../tasks/tasks-203.htm">Writing your own templates</a>&nbsp;
+       <a href="../tasks/tasks-203.htm">Writing your own templates</a>
     </p>
     <p>
-      <a href="../reference/ref-menu-edit.htm">Edit menu</a> <a href="../reference/ref-143.htm">Java Content Assist</a> <a href=
-      "../reference/ref-preferences-templates.htm">Templates preferences</a>
+      <img border="0" src="../images/ngrelr.gif" alt="Related reference" width="159" height="27"><br>
+      <a href="../reference/ref-menu-edit.htm">Edit menu</a><br>
+      <a href="../reference/ref-143.htm">Java Content Assist</a><br>
+      <a href="../reference/ref-preferences-templates.htm">Templates preferences</a><br>
     </p>
     <p>
       <br>
